# qt_mock

./: readme.md
home_automation/: CMakeLists.txt  main.cpp  readme.md
home_automation/images/: images.qrc
home_automation/model/: device_model.h  llmwrapper.h
home_automation/qml/: dashboard.qml  home_ai_agent.qml  home_air_conditioning.qml  home_automation.qml  home_cameras.qml  home_lights.qml  home_sensors.qml  home_setting.qml  home_switches.qml  main.qml  qml.qrc
home_automation/qml/device/: AirConditioning.qml  Camera.qml  Light.qml  Sensor.qml  Switches.qml
home_automation/qml/room/: labs.qml
